[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/ui/world_selector_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/buttons/button_hover.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/ui/buttons/button_pressed.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/ui/buttons/button_normal.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/ui/buttons/button_focus.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/ui/minimal_5x7.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/ui/ui_panel.tres" type="StyleBox" id=7]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/ui/minimal_5x7.ttf"

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=4]
resource_name = "show"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:anchor_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.289 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel:anchor_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.65 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Panel:anchor_left")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.05 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Panel:anchor_right")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.95 ]
}

[node name="WorldSelector" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 1162.38, 37.3887 )
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.05
anchor_top = 0.289
anchor_right = 0.95
anchor_bottom = 0.65
rect_pivot_offset = Vector2( 1162.38, 37.3887 )
custom_styles/panel = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_right = 1152.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "Select a Level"
align = 1

[node name="SelectedLevelLabel" type="Label" parent="Panel/VBoxContainer"]
margin_top = 45.0
margin_right = 1152.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.572549, 0.65098, 1 )
text = "Selected Level: 1 - 1"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 90.0
margin_right = 1152.0
margin_bottom = 150.0
custom_constants/separation = 15
alignment = 1

[node name="AddWorld" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 49.0
margin_right = 265.0
margin_bottom = 60.0
focus_neighbour_left = NodePath("../RemoveLevel")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath("../RemoveWorld")
focus_neighbour_bottom = NodePath("../../HBoxContainer2/Back")
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 3 )
text = "Add World"

[node name="RemoveWorld" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 280.0
margin_right = 568.0
margin_bottom = 60.0
focus_neighbour_left = NodePath("../AddWorld")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath("../AddLevel")
focus_neighbour_bottom = NodePath("../../HBoxContainer2/Back")
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 3 )
text = "Remove World"

[node name="AddLevel" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 583.0
margin_right = 799.0
margin_bottom = 60.0
focus_neighbour_left = NodePath("../RemoveWorld")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath("../RemoveLevel")
focus_neighbour_bottom = NodePath("../../HBoxContainer2/GoToLevel")
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 3 )
text = "Add Level"

[node name="RemoveLevel" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 814.0
margin_right = 1102.0
margin_bottom = 60.0
focus_neighbour_left = NodePath("../AddLevel")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath("../AddWorld")
focus_neighbour_bottom = NodePath("../../HBoxContainer2/GoToLevel")
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 3 )
text = "Remove Level"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 165.0
margin_right = 1152.0
margin_bottom = 225.0
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Panel/VBoxContainer/HBoxContainer2"]
margin_left = 382.0
margin_right = 504.0
margin_bottom = 60.0
focus_neighbour_left = NodePath("../GoToLevel")
focus_neighbour_top = NodePath("../../HBoxContainer/RemoveWorld")
focus_neighbour_right = NodePath("../GoToLevel")
focus_neighbour_bottom = NodePath(".")
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 3 )
text = "Back"

[node name="GoToLevel" type="Button" parent="Panel/VBoxContainer/HBoxContainer2"]
margin_left = 519.0
margin_right = 769.0
margin_bottom = 60.0
focus_neighbour_left = NodePath("../Back")
focus_neighbour_top = NodePath("../../HBoxContainer/AddLevel")
focus_neighbour_right = NodePath("../Back")
focus_neighbour_bottom = NodePath(".")
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.580392, 0.580392, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
text = "Go To Level"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/show = SubResource( 4 )
